--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="./pages/index.css" rel="stylesheet" />
     </head>
     <body class="page">
-        <div class="page_content">
+        <div class="page__content">
             <header class="header page__section">
               <img src="./images/Logo.svg" alt="Around the U.S. Logo"/>  
             </header>
@@ -23,7 +23,7 @@
                 <button class="profile__add-button"></button>
                </section> 
                <section class="cards">
-                <ul class="card__list">
+                <ul class="cards__list">
                     <li class="card">
                         <img src="./images/yosemite.jpg" class="card__image" alt="Image of Yosemite Valley"/>
                         <div class="card__description"> <h2 class="card__title">Yosemite Valley</h2>
