--- a/index.html
+++ b/index.html
@@ -1,72 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta content="width-device-width, initial-scale=1.0" name="viewport" />
-        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-        <title>Around the U.S.</title>
-        <link href="./pages/index.css" rel="stylesheet" />
-    </head>
-    <body class="page">
-        <div class="page__content">
-            <header class="header page__section">
-              <img src="./images/Logo.svg" alt="Around the U.S. Logo"/>  
-            </header>
-            <main class="content">
-               <section class="profile page__section">
-                <img src="./images/jacques-cousteau.jpg" alt="Avatar" class="profile__image"/>
-                <div class="profile__info">
-                    <h1 class="profile__title">Jacques Cousteau</h1>
-                    <button class="profile__edit-button"></button>
-                    <p class="profile__description">Explorer</p>
-                </div>
-                <button class="profile__add-button"></button>
-               </section> 
-               <section class="cards">
-                <ul class="cards__list">
-                    <li class="card">
-                        <img src="./images/yosemite.jpg" class="card__image" alt="Image of Yosemite Valley"/>
-                        <div class="card__description"> <h2 class="card__title">Yosemite Valley</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/lake-louise.jpg" class="card__image" alt="Image of Lake Louise"/>
-                        <div class="card__description"> <h2 class="card__title">Lake Louise</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/bald-mountains.jpg" class="card__image" alt="Image of the Bald Mountains"/>
-                        <div class="card__description"> <h2 class="card__title">Bald Mountains</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/latemar.jpg" class="card__image" alt="Image of Latemar"/>
-                        <div class="card__description"> <h2 class="card__title">Latemar</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/vanoise.jpg" class="card__image" alt="Image of Vanoise National Park"/>
-                        <div class="card__description"> <h2 class="card__title">Vanoise National Park</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/lago.jpg" class="card__image" alt="Image of Lago di Braies"/>
-                        <div class="card__description"> <h2 class="card__title">Lago di Braies</h2>
-                        <button class="card__like-button"></button>
-                        </div>
-                    </li>
-                    
-                </ul>
-               </section>
-            </main>
-            <footer class="footer page__section">
-                <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
-            </footer>
-        </div>    
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width-device-width, initial-scale=1.0" name="viewport" />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <title>Around the U.S.</title>
+    <link href="./pages/index.css" rel="stylesheet" />
+  </head>
+  <body class="page">
+    <div class="page__content">
+      <header class="header page__section">
+        <img
+          class="header__logo"
+          src="./images/Logo.svg"
+          alt="Around the U.S. Logo"
+        />
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img
+            src="./images/jacques-cousteau.jpg"
+            alt="Avatar"
+            class="profile__image"
+          />
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="edit"
+            ></button>
+            <p class="profile__description">Explorer</p>
+          </div>
+          <button
+            class="profile__add-button"
+            type="button"
+            aria-label="add"
+          ></button>
+        </section>
+        <section class="cards">
+          <ul class="cards__list">
+            <li class="card">
+              <img
+                src="./images/yosemite.jpg"
+                class="card__image"
+                alt="Image of Yosemite Valley"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lake-louise.jpg"
+                class="card__image"
+                alt="Image of Lake Louise"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/bald-mountains.jpg"
+                class="card__image"
+                alt="Image of the Bald Mountains"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountains</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/latemar.jpg"
+                class="card__image"
+                alt="Image of Latemar"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/vanoise.jpg"
+                class="card__image"
+                alt="Image of Vanoise National Park"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Vanoise National Park</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./images/lago.jpg"
+                class="card__image"
+                alt="Image of Lago di Braies"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lago di Braies</h2>
+                <button
+                  class="card__like-button"
+                  type="button"
+                  aria-label="like"
+                ></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
+      </footer>
+    </div>
+  </body>
 </html>
