--- a/index.html
+++ b/index.html
@@ -137,6 +137,23 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
+
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit Profile</p>
+        <form class="modal__form">
+          <input type="text" name="title" />
+          <input type="text" name="description" />
+          <button
+            class="modal__button"
+            type="button"
+            aria-label="save"
+          ></button>
+        </form>
+      </div>
+    </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
