add delete icon and java function to delete card

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
     <template id="card-template">
       <li class="card">
         <img src="" class="card__image" alt="" />
+        <button
+          class="card__delete-button"
+          type="button"
+          aria-label="delete"
+        ></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button
