add image preview modal and smooth open close transition of modals

--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
       </div>
     </div>
 
+    <!-- Image Popup Modal -->
+    <div class="modal popup_type_preview" id="image-popup">
+      <div class="modal__container modal__container_type_image">
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
+        <h3 class="modal__image_caption"></h3>
+        <img class="modal__image" src="" alt="" />
+      </div>
+    </div>
+
     <template id="card-template">
       <li class="card">
         <img src="" class="card__image" alt="" />
