correct html id value errors

--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
     <!-- Add Card Modal -->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button
-          class="modal__close"
-          id="modal-close-button"
-          type="button"
-        ></button>
+        <button class="modal__close" type="button"></button>
         <h3 class="modal__heading">New Place</h3>
         <form class="modal__form" id="add-card-form">
           <input
@@ -95,14 +91,14 @@
             type="text"
             name="title"
             placeholder="Title"
-            id="profile-title-input"
+            id="place-title-input"
           />
           <input
             class="modal__input modal__input_type_url"
             type="text"
             name="url"
             placeholder="Image URL"
-            id="profile-decription-input"
+            id="profile-image-input"
           />
           <button
             class="modal__button"
@@ -116,13 +112,9 @@
     <!-- Image Popup Modal -->
     <div class="modal popup_type_preview" id="image-popup">
       <div class="modal__container modal__container_type_image">
-        <button
-          class="modal__close"
-          id="modal-close-button"
-          type="button"
-        ></button>
+        <button class="modal__close" type="button"></button>
         <h3 class="modal__image_caption"></h3>
-        <img class="modal__image" src="" alt="" />
+        <img class="modal__image" src=" " alt=" " />
       </div>
     </div>
 
