correct BEM errors in image modal

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     </div>
 
     <!-- Image Popup Modal -->
-    <div class="modal popup_type_preview" id="image-popup">
+    <div class="modal" id="image-popup">
       <div class="modal__container modal__container_type_image">
         <button class="modal__close" type="button"></button>
-        <h3 class="modal__image_caption"></h3>
+        <h3 class="modal__caption"></h3>
         <img class="modal__image" src=" " alt=" " />
       </div>
     </div>
