--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
             placeholder="Description"
             id="profile-decription-input"
           />
-          <button
-            class="modal__button"
-            type="submit"
-            aria-label="save"
-          ></button>
+          <button class="modal__button" type="submit" aria-label="save">
+            Save
+          </button>
         </form>
       </div>
     </div>
@@ -95,16 +93,14 @@
           />
           <input
             class="modal__input modal__input_type_url"
-            type="text"
+            type="link"
             name="url"
             placeholder="Image URL"
             id="profile-image-input"
           />
-          <button
-            class="modal__button"
-            type="submit"
-            aria-label="save"
-          ></button>
+          <button class="modal__button" type="submit" aria-label="save">
+            Create
+          </button>
         </form>
       </div>
     </div>
@@ -137,6 +133,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
