--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           />
           <input
             class="modal__input modal__input_type_url"
-            type="link"
+            type="url"
             name="url"
             placeholder="Image URL"
             id="profile-image-input"
