--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="modal__container modal__container_type_image">
         <button class="modal__close" type="button"></button>
         <h3 class="modal__caption"></h3>
-        <img class="modal__image" src="&nbsp;" alt="" />
+        <img class="modal__image" src="" alt="" />
       </div>
     </div>
 
@@ -173,7 +173,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js" defer></script>
-    <script src="./scripts/validation.js" defer></script>
+    <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
