fix error in html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="modal__container modal__container_type_image">
         <button class="modal__close" type="button"></button>
         <h3 class="modal__caption"></h3>
-        <img class="modal__image" src="" alt="" />
+        <img class="modal__image" src="&nbsp" alt="" />
       </div>
     </div>
 
