update errors in index.js and card.js

--- a/src/index.html
+++ b/src/index.html
@@ -87,11 +87,7 @@
               characters.</span
             >
           </label>
-          <button
-            class="modal__button modal__button_disabled"
-            type="submit"
-            aria-label="save"
-          >
+          <button class="modal__button" type="submit" aria-label="save">
             Save
           </button>
         </form>
@@ -132,11 +128,7 @@
               >The "Image URL" field must contain a URL.</span
             >
           </label>
-          <button
-            class="modal__button modal__button_disabled"
-            type="submit"
-            aria-label="save"
-          >
+          <button class="modal__button" type="submit" aria-label="save">
             Create
           </button>
         </form>
