--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,23 @@
       </div>
     </div>
 
+    <!-- Confirm Delete Modal -->
+    <div class="modal" id="confirm-delete-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="modal-close-button"
+          type="button"
+        ></button>
+        <h3 class="modal__heading">Are you sure?</h3>
+        <form class="modal__form">
+          <button class="modal__button" type="submit" aria-label="save">
+            Yes
+          </button>
+        </form>
+      </div>
+    </div>
+
     <!-- Add Card Modal -->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
