--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 
     <!-- Confirm Delete Modal -->
     <div class="modal" id="confirm-delete-modal">
-      <div class="modal__container">
+      <div class="modal__container modal__container_type_confirmation">
         <button
           class="modal__close"
           id="modal-close-button"
@@ -104,7 +104,11 @@
         ></button>
         <h3 class="modal__heading">Are you sure?</h3>
         <form class="modal__form">
-          <button class="modal__button" type="submit" aria-label="save">
+          <button
+            class="modal__button modal__button_type_confirmation"
+            type="submit"
+            aria-label="save"
+          >
             Yes
           </button>
         </form>
@@ -121,7 +125,7 @@
             <input
               class="modal__input modal__input_type_title"
               type="text"
-              name="title"
+              name="name"
               placeholder="Title"
               id="place-title-input"
               minlength="1"
@@ -136,7 +140,7 @@
             <input
               class="modal__input modal__input_type_url"
               type="url"
-              name="url"
+              name="link"
               placeholder="Image URL"
               id="place-url-input"
               required
