--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
             <input
               class="modal__input modal__input_type_url"
               type="url"
-              name="link"
+              name="avatar"
               placeholder="Image URL"
               id="place-url-input"
               required
