correct avatar form validator and render loading

--- a/src/index.html
+++ b/src/index.html
@@ -110,10 +110,10 @@
               type="url"
               name="avatar"
               placeholder="Image URL"
-              id="place-url-input"
+              id="avatar-url-input"
               required
             />
-            <span class="modal__error" id="place-url-input-error"
+            <span class="modal__error" id="avatar-url-input-error"
               >The "Image URL" field must contain a URL.</span
             >
           </label>
