--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,7 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar-container">
-            <img
-              src="<%=require('./images/jacques-cousteau.jpg')%>"
-              alt="Avatar"
-              class="profile__image"
-            />
+            <img src="" alt="Avatar" class="profile__image" />
             <button class="profile__image-edit"></button>
           </div>
 
